Solita - A Filipino Programming Language/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> init body
Rule 2     program -> init
Rule 3     program -> body
Rule 4     init -> VARIABLES { vardecnames }
Rule 5     vardecnames -> INTEGER NAME vardecnames
Rule 6     vardecnames -> FLOAT NAME vardecnames
Rule 7     vardecnames -> STRING NAME vardecnames
Rule 8     vardecnames -> ARRAY NAME vardecnames
Rule 9     vardecnames -> INTEGER NAME
Rule 10    vardecnames -> FLOAT NAME
Rule 11    vardecnames -> STRING NAME
Rule 12    vardecnames -> ARRAY NAME
Rule 13    body -> body statement
Rule 14    body -> statement
Rule 15    statement -> PAKITA ( NAME )
Rule 16    statement -> PAKITA ( LITSTRING )
Rule 17    statement -> BASA ( NAME )
Rule 18    statement -> NAME EQUAL expression
Rule 19    statement -> NAME [ expression ] EQUAL expression
Rule 20    statement -> DAGDAG ( NAME , expression )
Rule 21    statement -> BURA ( NAME , expression )
Rule 22    statement -> PAG ( cond ) { body }
Rule 23    statement -> PAG ( cond ) { body } elseblocks
Rule 24    statement -> HABANG ( cond ) { body }
Rule 25    elseblocks -> elseifblock
Rule 26    elseblocks -> elseblock
Rule 27    elseblock -> KUNDI { body }
Rule 28    elseifblock -> KUNDIPAG ( cond ) { body } elseblocks
Rule 29    cond -> expression ISEQUAL expression
Rule 30    cond -> expression NE expression
Rule 31    cond -> expression GTE expression
Rule 32    cond -> expression LTE expression
Rule 33    cond -> expression LT expression
Rule 34    cond -> expression GT expression
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression POWER expression
Rule 40    expression -> expression MODULO expression
Rule 41    expression -> MINUS expression
Rule 42    expression -> ( expression )
Rule 43    expression -> LITSTRING
Rule 44    expression -> LITINTEGER
Rule 45    expression -> LITFLOAT
Rule 46    expression -> NAME
Rule 47    expression -> SAMA ( NAME , NAME )
Rule 48    expression -> SAMA ( NAME , LITSTRING )
Rule 49    expression -> SAMA ( LITSTRING , NAME )
Rule 50    expression -> HABA ( NAME )
Rule 51    expression -> HANAP ( NAME , NAME )
Rule 52    expression -> HANAP ( NAME , LITSTRING )
Rule 53    expression -> HANAP ( LITSTRING , NAME )
Rule 54    expression -> SA ( NAME , expression )
Rule 55    expression -> NAME [ expression ]

Terminals, with rules where they appear

(                    : 15 16 17 20 21 22 23 24 28 42 47 48 49 50 51 52 53 54
)                    : 15 16 17 20 21 22 23 24 28 42 47 48 49 50 51 52 53 54
,                    : 20 21 47 48 49 51 52 53 54
ARRAY                : 8 12
BASA                 : 17
BURA                 : 21
DAGDAG               : 20
DIVIDE               : 38
EQUAL                : 18 19
FLOAT                : 6 10
GT                   : 34
GTE                  : 31
HABA                 : 50
HABANG               : 24
HANAP                : 51 52 53
INTEGER              : 5 9
ISEQUAL              : 29
KUNDI                : 27
KUNDIPAG             : 28
LITFLOAT             : 45
LITINTEGER           : 44
LITSTRING            : 16 43 48 49 52 53
LT                   : 33
LTE                  : 32
MINUS                : 36 41
MODULO               : 40
NAME                 : 5 6 7 8 9 10 11 12 15 17 18 19 20 21 46 47 47 48 49 50 51 51 52 53 54 55
NE                   : 30
PAG                  : 22 23
PAKITA               : 15 16
PLUS                 : 35
POWER                : 39
SA                   : 54
SAMA                 : 47 48 49
STRING               : 7 11
TIMES                : 37
VARIABLES            : 4
[                    : 19 55
]                    : 19 55
error                : 
{                    : 4 22 23 24 27 28
}                    : 4 22 23 24 27 28

Nonterminals, with rules where they appear

body                 : 1 3 13 22 23 24 27 28
cond                 : 22 23 24 28
elseblock            : 26
elseblocks           : 23 28
elseifblock          : 25
expression           : 18 19 19 20 21 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 54 55
init                 : 1 2
program              : 0
statement            : 13 14
vardecnames          : 4 5 6 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . init body
    (2) program -> . init
    (3) program -> . body
    (4) init -> . VARIABLES { vardecnames }
    (13) body -> . body statement
    (14) body -> . statement
    (15) statement -> . PAKITA ( NAME )
    (16) statement -> . PAKITA ( LITSTRING )
    (17) statement -> . BASA ( NAME )
    (18) statement -> . NAME EQUAL expression
    (19) statement -> . NAME [ expression ] EQUAL expression
    (20) statement -> . DAGDAG ( NAME , expression )
    (21) statement -> . BURA ( NAME , expression )
    (22) statement -> . PAG ( cond ) { body }
    (23) statement -> . PAG ( cond ) { body } elseblocks
    (24) statement -> . HABANG ( cond ) { body }

    VARIABLES       shift and go to state 12
    PAKITA          shift and go to state 2
    BASA            shift and go to state 8
    NAME            shift and go to state 7
    DAGDAG          shift and go to state 11
    BURA            shift and go to state 6
    PAG             shift and go to state 9
    HABANG          shift and go to state 1

    program                        shift and go to state 10
    init                           shift and go to state 5
    statement                      shift and go to state 3
    body                           shift and go to state 4

state 1

    (24) statement -> HABANG . ( cond ) { body }

    (               shift and go to state 13


state 2

    (15) statement -> PAKITA . ( NAME )
    (16) statement -> PAKITA . ( LITSTRING )

    (               shift and go to state 14


state 3

    (14) body -> statement .

    }               reduce using rule 14 (body -> statement .)
    PAKITA          reduce using rule 14 (body -> statement .)
    BASA            reduce using rule 14 (body -> statement .)
    NAME            reduce using rule 14 (body -> statement .)
    DAGDAG          reduce using rule 14 (body -> statement .)
    BURA            reduce using rule 14 (body -> statement .)
    PAG             reduce using rule 14 (body -> statement .)
    HABANG          reduce using rule 14 (body -> statement .)
    $end            reduce using rule 14 (body -> statement .)


state 4

    (3) program -> body .
    (13) body -> body . statement
    (15) statement -> . PAKITA ( NAME )
    (16) statement -> . PAKITA ( LITSTRING )
    (17) statement -> . BASA ( NAME )
    (18) statement -> . NAME EQUAL expression
    (19) statement -> . NAME [ expression ] EQUAL expression
    (20) statement -> . DAGDAG ( NAME , expression )
    (21) statement -> . BURA ( NAME , expression )
    (22) statement -> . PAG ( cond ) { body }
    (23) statement -> . PAG ( cond ) { body } elseblocks
    (24) statement -> . HABANG ( cond ) { body }

    $end            reduce using rule 3 (program -> body .)
    PAKITA          shift and go to state 2
    BASA            shift and go to state 8
    NAME            shift and go to state 7
    DAGDAG          shift and go to state 11
    BURA            shift and go to state 6
    PAG             shift and go to state 9
    HABANG          shift and go to state 1

    statement                      shift and go to state 15

state 5

    (1) program -> init . body
    (2) program -> init .
    (13) body -> . body statement
    (14) body -> . statement
    (15) statement -> . PAKITA ( NAME )
    (16) statement -> . PAKITA ( LITSTRING )
    (17) statement -> . BASA ( NAME )
    (18) statement -> . NAME EQUAL expression
    (19) statement -> . NAME [ expression ] EQUAL expression
    (20) statement -> . DAGDAG ( NAME , expression )
    (21) statement -> . BURA ( NAME , expression )
    (22) statement -> . PAG ( cond ) { body }
    (23) statement -> . PAG ( cond ) { body } elseblocks
    (24) statement -> . HABANG ( cond ) { body }

    $end            reduce using rule 2 (program -> init .)
    PAKITA          shift and go to state 2
    BASA            shift and go to state 8
    NAME            shift and go to state 7
    DAGDAG          shift and go to state 11
    BURA            shift and go to state 6
    PAG             shift and go to state 9
    HABANG          shift and go to state 1

    body                           shift and go to state 16
    statement                      shift and go to state 3

state 6

    (21) statement -> BURA . ( NAME , expression )

    (               shift and go to state 17


state 7

    (18) statement -> NAME . EQUAL expression
    (19) statement -> NAME . [ expression ] EQUAL expression

    EQUAL           shift and go to state 19
    [               shift and go to state 18


state 8

    (17) statement -> BASA . ( NAME )

    (               shift and go to state 20


state 9

    (22) statement -> PAG . ( cond ) { body }
    (23) statement -> PAG . ( cond ) { body } elseblocks

    (               shift and go to state 21


state 10

    (0) S' -> program .



state 11

    (20) statement -> DAGDAG . ( NAME , expression )

    (               shift and go to state 22


state 12

    (4) init -> VARIABLES . { vardecnames }

    {               shift and go to state 23


state 13

    (24) statement -> HABANG ( . cond ) { body }
    (29) cond -> . expression ISEQUAL expression
    (30) cond -> . expression NE expression
    (31) cond -> . expression GTE expression
    (32) cond -> . expression LTE expression
    (33) cond -> . expression LT expression
    (34) cond -> . expression GT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    cond                           shift and go to state 24
    expression                     shift and go to state 27

state 14

    (15) statement -> PAKITA ( . NAME )
    (16) statement -> PAKITA ( . LITSTRING )

    NAME            shift and go to state 37
    LITSTRING       shift and go to state 36


state 15

    (13) body -> body statement .

    }               reduce using rule 13 (body -> body statement .)
    PAKITA          reduce using rule 13 (body -> body statement .)
    BASA            reduce using rule 13 (body -> body statement .)
    NAME            reduce using rule 13 (body -> body statement .)
    DAGDAG          reduce using rule 13 (body -> body statement .)
    BURA            reduce using rule 13 (body -> body statement .)
    PAG             reduce using rule 13 (body -> body statement .)
    HABANG          reduce using rule 13 (body -> body statement .)
    $end            reduce using rule 13 (body -> body statement .)


state 16

    (1) program -> init body .
    (13) body -> body . statement
    (15) statement -> . PAKITA ( NAME )
    (16) statement -> . PAKITA ( LITSTRING )
    (17) statement -> . BASA ( NAME )
    (18) statement -> . NAME EQUAL expression
    (19) statement -> . NAME [ expression ] EQUAL expression
    (20) statement -> . DAGDAG ( NAME , expression )
    (21) statement -> . BURA ( NAME , expression )
    (22) statement -> . PAG ( cond ) { body }
    (23) statement -> . PAG ( cond ) { body } elseblocks
    (24) statement -> . HABANG ( cond ) { body }

    $end            reduce using rule 1 (program -> init body .)
    PAKITA          shift and go to state 2
    BASA            shift and go to state 8
    NAME            shift and go to state 7
    DAGDAG          shift and go to state 11
    BURA            shift and go to state 6
    PAG             shift and go to state 9
    HABANG          shift and go to state 1

    statement                      shift and go to state 15

state 17

    (21) statement -> BURA ( . NAME , expression )

    NAME            shift and go to state 38


state 18

    (19) statement -> NAME [ . expression ] EQUAL expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    expression                     shift and go to state 39

state 19

    (18) statement -> NAME EQUAL . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    expression                     shift and go to state 40

state 20

    (17) statement -> BASA ( . NAME )

    NAME            shift and go to state 41


state 21

    (22) statement -> PAG ( . cond ) { body }
    (23) statement -> PAG ( . cond ) { body } elseblocks
    (29) cond -> . expression ISEQUAL expression
    (30) cond -> . expression NE expression
    (31) cond -> . expression GTE expression
    (32) cond -> . expression LTE expression
    (33) cond -> . expression LT expression
    (34) cond -> . expression GT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    cond                           shift and go to state 42
    expression                     shift and go to state 27

state 22

    (20) statement -> DAGDAG ( . NAME , expression )

    NAME            shift and go to state 43


state 23

    (4) init -> VARIABLES { . vardecnames }
    (5) vardecnames -> . INTEGER NAME vardecnames
    (6) vardecnames -> . FLOAT NAME vardecnames
    (7) vardecnames -> . STRING NAME vardecnames
    (8) vardecnames -> . ARRAY NAME vardecnames
    (9) vardecnames -> . INTEGER NAME
    (10) vardecnames -> . FLOAT NAME
    (11) vardecnames -> . STRING NAME
    (12) vardecnames -> . ARRAY NAME

    INTEGER         shift and go to state 46
    FLOAT           shift and go to state 48
    STRING          shift and go to state 44
    ARRAY           shift and go to state 45

    vardecnames                    shift and go to state 47

state 24

    (24) statement -> HABANG ( cond . ) { body }

    )               shift and go to state 49


state 25

    (50) expression -> HABA . ( NAME )

    (               shift and go to state 50


state 26

    (44) expression -> LITINTEGER .

    ]               reduce using rule 44 (expression -> LITINTEGER .)
    PLUS            reduce using rule 44 (expression -> LITINTEGER .)
    MINUS           reduce using rule 44 (expression -> LITINTEGER .)
    TIMES           reduce using rule 44 (expression -> LITINTEGER .)
    DIVIDE          reduce using rule 44 (expression -> LITINTEGER .)
    POWER           reduce using rule 44 (expression -> LITINTEGER .)
    MODULO          reduce using rule 44 (expression -> LITINTEGER .)
    PAKITA          reduce using rule 44 (expression -> LITINTEGER .)
    BASA            reduce using rule 44 (expression -> LITINTEGER .)
    NAME            reduce using rule 44 (expression -> LITINTEGER .)
    DAGDAG          reduce using rule 44 (expression -> LITINTEGER .)
    BURA            reduce using rule 44 (expression -> LITINTEGER .)
    PAG             reduce using rule 44 (expression -> LITINTEGER .)
    HABANG          reduce using rule 44 (expression -> LITINTEGER .)
    $end            reduce using rule 44 (expression -> LITINTEGER .)
    }               reduce using rule 44 (expression -> LITINTEGER .)
    ISEQUAL         reduce using rule 44 (expression -> LITINTEGER .)
    NE              reduce using rule 44 (expression -> LITINTEGER .)
    GTE             reduce using rule 44 (expression -> LITINTEGER .)
    LTE             reduce using rule 44 (expression -> LITINTEGER .)
    LT              reduce using rule 44 (expression -> LITINTEGER .)
    GT              reduce using rule 44 (expression -> LITINTEGER .)
    )               reduce using rule 44 (expression -> LITINTEGER .)


state 27

    (29) cond -> expression . ISEQUAL expression
    (30) cond -> expression . NE expression
    (31) cond -> expression . GTE expression
    (32) cond -> expression . LTE expression
    (33) cond -> expression . LT expression
    (34) cond -> expression . GT expression
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . POWER expression
    (40) expression -> expression . MODULO expression

    ISEQUAL         shift and go to state 62
    NE              shift and go to state 58
    GTE             shift and go to state 61
    LTE             shift and go to state 52
    LT              shift and go to state 59
    GT              shift and go to state 53
    PLUS            shift and go to state 51
    MINUS           shift and go to state 55
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 60
    POWER           shift and go to state 56
    MODULO          shift and go to state 57


state 28

    (46) expression -> NAME .
    (55) expression -> NAME . [ expression ]

    ]               reduce using rule 46 (expression -> NAME .)
    PLUS            reduce using rule 46 (expression -> NAME .)
    MINUS           reduce using rule 46 (expression -> NAME .)
    TIMES           reduce using rule 46 (expression -> NAME .)
    DIVIDE          reduce using rule 46 (expression -> NAME .)
    POWER           reduce using rule 46 (expression -> NAME .)
    MODULO          reduce using rule 46 (expression -> NAME .)
    PAKITA          reduce using rule 46 (expression -> NAME .)
    BASA            reduce using rule 46 (expression -> NAME .)
    NAME            reduce using rule 46 (expression -> NAME .)
    DAGDAG          reduce using rule 46 (expression -> NAME .)
    BURA            reduce using rule 46 (expression -> NAME .)
    PAG             reduce using rule 46 (expression -> NAME .)
    HABANG          reduce using rule 46 (expression -> NAME .)
    $end            reduce using rule 46 (expression -> NAME .)
    }               reduce using rule 46 (expression -> NAME .)
    ISEQUAL         reduce using rule 46 (expression -> NAME .)
    NE              reduce using rule 46 (expression -> NAME .)
    GTE             reduce using rule 46 (expression -> NAME .)
    LTE             reduce using rule 46 (expression -> NAME .)
    LT              reduce using rule 46 (expression -> NAME .)
    GT              reduce using rule 46 (expression -> NAME .)
    )               reduce using rule 46 (expression -> NAME .)
    [               shift and go to state 63


state 29

    (43) expression -> LITSTRING .

    ]               reduce using rule 43 (expression -> LITSTRING .)
    PLUS            reduce using rule 43 (expression -> LITSTRING .)
    MINUS           reduce using rule 43 (expression -> LITSTRING .)
    TIMES           reduce using rule 43 (expression -> LITSTRING .)
    DIVIDE          reduce using rule 43 (expression -> LITSTRING .)
    POWER           reduce using rule 43 (expression -> LITSTRING .)
    MODULO          reduce using rule 43 (expression -> LITSTRING .)
    PAKITA          reduce using rule 43 (expression -> LITSTRING .)
    BASA            reduce using rule 43 (expression -> LITSTRING .)
    NAME            reduce using rule 43 (expression -> LITSTRING .)
    DAGDAG          reduce using rule 43 (expression -> LITSTRING .)
    BURA            reduce using rule 43 (expression -> LITSTRING .)
    PAG             reduce using rule 43 (expression -> LITSTRING .)
    HABANG          reduce using rule 43 (expression -> LITSTRING .)
    $end            reduce using rule 43 (expression -> LITSTRING .)
    }               reduce using rule 43 (expression -> LITSTRING .)
    ISEQUAL         reduce using rule 43 (expression -> LITSTRING .)
    NE              reduce using rule 43 (expression -> LITSTRING .)
    GTE             reduce using rule 43 (expression -> LITSTRING .)
    LTE             reduce using rule 43 (expression -> LITSTRING .)
    LT              reduce using rule 43 (expression -> LITSTRING .)
    GT              reduce using rule 43 (expression -> LITSTRING .)
    )               reduce using rule 43 (expression -> LITSTRING .)


state 30

    (41) expression -> MINUS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    expression                     shift and go to state 64

state 31

    (47) expression -> SAMA . ( NAME , NAME )
    (48) expression -> SAMA . ( NAME , LITSTRING )
    (49) expression -> SAMA . ( LITSTRING , NAME )

    (               shift and go to state 65


state 32

    (51) expression -> HANAP . ( NAME , NAME )
    (52) expression -> HANAP . ( NAME , LITSTRING )
    (53) expression -> HANAP . ( LITSTRING , NAME )

    (               shift and go to state 66


state 33

    (42) expression -> ( . expression )
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    expression                     shift and go to state 67

state 34

    (45) expression -> LITFLOAT .

    ]               reduce using rule 45 (expression -> LITFLOAT .)
    PLUS            reduce using rule 45 (expression -> LITFLOAT .)
    MINUS           reduce using rule 45 (expression -> LITFLOAT .)
    TIMES           reduce using rule 45 (expression -> LITFLOAT .)
    DIVIDE          reduce using rule 45 (expression -> LITFLOAT .)
    POWER           reduce using rule 45 (expression -> LITFLOAT .)
    MODULO          reduce using rule 45 (expression -> LITFLOAT .)
    PAKITA          reduce using rule 45 (expression -> LITFLOAT .)
    BASA            reduce using rule 45 (expression -> LITFLOAT .)
    NAME            reduce using rule 45 (expression -> LITFLOAT .)
    DAGDAG          reduce using rule 45 (expression -> LITFLOAT .)
    BURA            reduce using rule 45 (expression -> LITFLOAT .)
    PAG             reduce using rule 45 (expression -> LITFLOAT .)
    HABANG          reduce using rule 45 (expression -> LITFLOAT .)
    $end            reduce using rule 45 (expression -> LITFLOAT .)
    }               reduce using rule 45 (expression -> LITFLOAT .)
    ISEQUAL         reduce using rule 45 (expression -> LITFLOAT .)
    NE              reduce using rule 45 (expression -> LITFLOAT .)
    GTE             reduce using rule 45 (expression -> LITFLOAT .)
    LTE             reduce using rule 45 (expression -> LITFLOAT .)
    LT              reduce using rule 45 (expression -> LITFLOAT .)
    GT              reduce using rule 45 (expression -> LITFLOAT .)
    )               reduce using rule 45 (expression -> LITFLOAT .)


state 35

    (54) expression -> SA . ( NAME , expression )

    (               shift and go to state 68


state 36

    (16) statement -> PAKITA ( LITSTRING . )

    )               shift and go to state 69


state 37

    (15) statement -> PAKITA ( NAME . )

    )               shift and go to state 70


state 38

    (21) statement -> BURA ( NAME . , expression )

    ,               shift and go to state 71


state 39

    (19) statement -> NAME [ expression . ] EQUAL expression
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . POWER expression
    (40) expression -> expression . MODULO expression

    ]               shift and go to state 72
    PLUS            shift and go to state 51
    MINUS           shift and go to state 55
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 60
    POWER           shift and go to state 56
    MODULO          shift and go to state 57


state 40

    (18) statement -> NAME EQUAL expression .
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . POWER expression
    (40) expression -> expression . MODULO expression

    PAKITA          reduce using rule 18 (statement -> NAME EQUAL expression .)
    BASA            reduce using rule 18 (statement -> NAME EQUAL expression .)
    NAME            reduce using rule 18 (statement -> NAME EQUAL expression .)
    DAGDAG          reduce using rule 18 (statement -> NAME EQUAL expression .)
    BURA            reduce using rule 18 (statement -> NAME EQUAL expression .)
    PAG             reduce using rule 18 (statement -> NAME EQUAL expression .)
    HABANG          reduce using rule 18 (statement -> NAME EQUAL expression .)
    $end            reduce using rule 18 (statement -> NAME EQUAL expression .)
    }               reduce using rule 18 (statement -> NAME EQUAL expression .)
    PLUS            shift and go to state 51
    MINUS           shift and go to state 55
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 60
    POWER           shift and go to state 56
    MODULO          shift and go to state 57


state 41

    (17) statement -> BASA ( NAME . )

    )               shift and go to state 73


state 42

    (22) statement -> PAG ( cond . ) { body }
    (23) statement -> PAG ( cond . ) { body } elseblocks

    )               shift and go to state 74


state 43

    (20) statement -> DAGDAG ( NAME . , expression )

    ,               shift and go to state 75


state 44

    (7) vardecnames -> STRING . NAME vardecnames
    (11) vardecnames -> STRING . NAME

    NAME            shift and go to state 76


state 45

    (8) vardecnames -> ARRAY . NAME vardecnames
    (12) vardecnames -> ARRAY . NAME

    NAME            shift and go to state 77


state 46

    (5) vardecnames -> INTEGER . NAME vardecnames
    (9) vardecnames -> INTEGER . NAME

    NAME            shift and go to state 78


state 47

    (4) init -> VARIABLES { vardecnames . }

    }               shift and go to state 79


state 48

    (6) vardecnames -> FLOAT . NAME vardecnames
    (10) vardecnames -> FLOAT . NAME

    NAME            shift and go to state 80


state 49

    (24) statement -> HABANG ( cond ) . { body }

    {               shift and go to state 81


state 50

    (50) expression -> HABA ( . NAME )

    NAME            shift and go to state 82


state 51

    (35) expression -> expression PLUS . expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression POWER expression
    (40) expression -> . expression MODULO expression
    (41) expression -> . MINUS expression
    (42) expression -> . ( expression )
    (43) expression -> . LITSTRING
    (44) expression -> . LITINTEGER
    (45) expression -> . LITFLOAT
    (46) expression -> . NAME
    (47) expression -> . SAMA ( NAME , NAME )
    (48) expression -> . SAMA ( NAME , LITSTRING )
    (49) expression -> . SAMA ( LITSTRING , NAME )
    (50) expression -> . HABA ( NAME )
    (51) expression -> . HANAP ( NAME , NAME )
    (52) expression -> . HANAP ( NAME , LITSTRING )
    (53) expression -> . HANAP ( LITSTRING , NAME )
    (54) expression -> . SA ( NAME , expression )
    (55) expression -> . NAME [ expression ]

    MINUS           shift and go to state 30
    (               shift and go to state 33
    LITSTRING       shift and go to state 29
    LITINTEGER      shift and go to state 26
    LITFLOAT        shift and go to state 34
    NAME            shift and go to state 28
    SAMA            shift and go to state 31
    HABA            shift and go to state 25
    HANAP           shift and go to state 32
    SA              shift and go to state 35

    expression                     shift and go to state 83

state 52
